tests/int/check_command/snapshots/integration__int__check_command__cycles__should_ignore_cycle_when_disabled.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_no_cycle_check.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
