tests/int/check_command/snapshots/integration__int__check_command__cycles__should_pass_acyclic_crate_with_rule_enabled.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/check
    - check
    - "-c"
    - fixtures/check/rules_deny_cycles.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
