tests/int/check_command/snapshots/integration__int__check_command__cycles__should_pass_when_cycle_is_allowlisted.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_allow_cycle.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
