tests/int/check_command/snapshots/integration__int__check_command__cycles__should_report_parent_child_cycle_when_knob_set.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_parent_child.toml
---
success: false
exit_code: 1
----- stdout -----
crawk check: 2 violations

  CYCLE nest -> nest::inner   (rule: cycle: nest, nest::inner)
  CYCLE nest::inner -> nest   (rule: cycle: nest, nest::inner)

----- stderr -----
