tests/int/check_command/snapshots/integration__int__check_command__cycles__should_warn_on_stale_allowlist_entry.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_allow_cycle_stale.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[33mWARN[39m allow-cycle [delta, standalone] (untangled in #2) covers no detected cycle; remove or update it
