tests/int/check_command/snapshots/integration__int__check_command__cycles__should_warn_when_allowlist_is_inert.snap
---
source: tests/int/check_command/cycles.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - check
    - "-c"
    - fixtures/cycles/rules_allow_cycle_inert.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[33mWARN[39m allow-cycle entries have no effect while deny-cycles is false
